add: novos cards e rodapé

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
         <main id="cards"></main>
     </div>
     <script src="./main.js"></script>
+        <footer>
+            <p>
+                Desenvolvido por <span>Giancarlo Pagliarini Alves</span>
+            </p>
+            <a href="https://github.com/GiancarloPagliarini" target="_blank"><img src="./assets/logo-github.svg" alt="logo github"></a>
+        </footer>
 </body>
 </html>
